# predeq

./: .gitignore  .readthedocs.yml  README.rst  pyproject.toml
.github/workflows/: python-package.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  toctree.rst
docs/source/_static/css/: overrides.css
src/predeq/: _predeq.py  recipes.py
test/: conftest.py  test_basic.py  test_doc_example.py  test_recipes.py  test_recipes_hypothesis.py  test_recipes_repr.py  test_repr.py
