[project]
name = "predeq"
version = "0.0.1"
authors = [
  { name="Taras Radchenko", email="petuzk.dev@gmail.com" },
]
description = "Predicate-based equivalence testing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
