[project]
name = "predeq"
version = "0.0.3"
authors = [
    { name="Taras Radchenko", email="petuzk.dev@gmail.com" },
]
description = "Predicate-based equivalence testing"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://predeq.readthedocs.io"
Source = "https://github.com/petuzk/predeq"

[project.optional-dependencies]
dev = [
    "pytest==8.2.1",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
